Refactor SecurityConfig for improved security settings